Renamed game options

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -17,8 +17,8 @@ SING_JUKEBOX_DESC=Escoltar les meves cançons
 SING_STATS=Estadístiques
 SING_STATS_DESC=Veure estadístiques
 
-SING_GAME_OPTIONS=Opcions de joc
-SING_GAME_OPTIONS_DESC=Canviar preferències de joc
+SING_OPTIONS=Opcions de joc
+SING_OPTIONS_DESC=Canviar preferències de joc
 
 SING_EXIT=Sortir
 SING_EXIT_DESC=Sortir del joc
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Difícil
 
 SING_OPTIONS=Opcions
 
-SING_OPTIONS_GAME_LANGUAGE=Idioma
-SING_OPTIONS_GAME_SONGMENU=Menú de cançons
-SING_OPTIONS_GAME_DUETS=Duets
-SING_OPTIONS_GAME_TABS=Pestanyes
-SING_OPTIONS_GAME_SORTING=Ordenació
-SING_OPTIONS_GAME_SHOWSCORES=Mostrar puntuacions
-SING_OPTIONS_GAME_SINGSCORES=Puntuacions sobre el cant
+SING_OPTIONS_GENERAL_LANGUAGE=Idioma
+SING_OPTIONS_GENERAL_SONGMENU=Menú de cançons
+SING_OPTIONS_GENERAL_DUETS=Duets
+SING_OPTIONS_GENERAL_TABS=Pestanyes
+SING_OPTIONS_GENERAL_SORTING=Ordenació
+SING_OPTIONS_GENERAL_SHOWSCORES=Mostrar puntuacions
+SING_OPTIONS_GENERAL_SINGSCORES=Puntuacions sobre el cant
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Ruleta
 OPTION_VALUE_CHESSBOARD=Tauler d'escacs
@@ -684,6 +684,7 @@ C_FIXEDBY=Reparat per
 C_FOLDERS=Carpetes
 
 C_GAME=Joc
+;TODO: C_GENERAL=General
 C_GRAPHICS=Gràfics
 
 C_INFORMATION=Informació
