--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -17,8 +17,8 @@ SING_JUKEBOX_DESC=Spiele meine Sammlung ab
 SING_STATS=Statistiken
 SING_STATS_DESC=Die Statistiken anschauen
 
-SING_GAME_OPTIONS=Spieloptionen
-SING_GAME_OPTIONS_DESC=Verändere die Spieleinstellungen
+SING_OPTIONS=Spieloptionen
+SING_OPTIONS_DESC=Verändere die Spieleinstellungen
 
 SING_EXIT=Beenden
 SING_EXIT_DESC=Spiel verlassen
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Schwierig
 
 SING_OPTIONS=Optionen
 
-SING_OPTIONS_GAME_LANGUAGE=Sprache
-SING_OPTIONS_GAME_SONGMENU=Menü
-SING_OPTIONS_GAME_DUETS=DuettScores
-SING_OPTIONS_GAME_TABS=Ordner
-SING_OPTIONS_GAME_SORTING=Sortierung
-SING_OPTIONS_GAME_SHOWSCORES=Punktzahl anzeigen
-SING_OPTIONS_GAME_SINGSCORES=Punkte vergeben
+SING_OPTIONS_GENERAL_LANGUAGE=Sprache
+SING_OPTIONS_GENERAL_SONGMENU=Menü
+SING_OPTIONS_GENERAL_DUETS=DuettScores
+SING_OPTIONS_GENERAL_TABS=Ordner
+SING_OPTIONS_GENERAL_SORTING=Sortierung
+SING_OPTIONS_GENERAL_SHOWSCORES=Punktzahl anzeigen
+SING_OPTIONS_GENERAL_SINGSCORES=Punkte vergeben
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Roulette
 OPTION_VALUE_CHESSBOARD=Raster
@@ -684,6 +684,7 @@ C_FIXEDBY=Korrigiert von
 C_FOLDERS=Ordner
 
 C_GAME=Spiel
+;TODO: C_GENERAL=General
 C_GRAPHICS=Grafik
 
 C_INFORMATION=Information
