--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -17,8 +17,8 @@ SING_JUKEBOX_DESC=Kuula minu kollektsiooni
 SING_STATS=Statistika
 SING_STATS_DESC=Vaata statistikat
 
-SING_GAME_OPTIONS=Mängu võimalused
-SING_GAME_OPTIONS_DESC=Muuda mängu seadeid
+SING_OPTIONS=Mängu võimalused
+SING_OPTIONS_DESC=Muuda mängu seadeid
 
 SING_EXIT=Välju
 SING_EXIT_DESC=Välju mängust
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Raske
 
 SING_OPTIONS=Võimalused
 
-SING_OPTIONS_GAME_LANGUAGE=Keel
-SING_OPTIONS_GAME_SONGMENU=Laulu menüü
-SING_OPTIONS_GAME_DUETS=Duettid
-SING_OPTIONS_GAME_TABS=Vahelehed
-SING_OPTIONS_GAME_SORTING=Sorteerimine
-SING_OPTIONS_GAME_SHOWSCORES=Näita skoore
-SING_OPTIONS_GAME_SINGSCORES=Laulmise skoorid
+SING_OPTIONS_GENERAL_LANGUAGE=Keel
+SING_OPTIONS_GENERAL_SONGMENU=Laulu menüü
+SING_OPTIONS_GENERAL_DUETS=Duettid
+SING_OPTIONS_GENERAL_TABS=Vahelehed
+SING_OPTIONS_GENERAL_SORTING=Sorteerimine
+SING_OPTIONS_GENERAL_SHOWSCORES=Näita skoore
+SING_OPTIONS_GENERAL_SINGSCORES=Laulmise skoorid
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Rulett
 OPTION_VALUE_CHESSBOARD=Malelaud
@@ -684,6 +684,7 @@ C_FIXEDBY=Parandatud
 C_FOLDERS=Kaustad
 
 C_GAME=Mäng
+;TODO: C_GENERAL=General
 C_GRAPHICS=Graafika
 
 C_INFORMATION=Informatsioon
