--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -17,8 +17,8 @@ SING_JUKEBOX_DESC=Escuchar mis canciones
 SING_STATS=Estadísticas
 SING_STATS_DESC=Ver estadísticas
 
-SING_GAME_OPTIONS=Opciones
-SING_GAME_OPTIONS_DESC=Cambia las opciones del juego
+SING_OPTIONS=Opciones
+SING_OPTIONS_DESC=Cambia las opciones del juego
 
 SING_EXIT=Salir
 SING_EXIT_DESC=Salir del juego
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Difícil
 
 SING_OPTIONS=Opciones
 
-SING_OPTIONS_GAME_LANGUAGE=Idioma
-SING_OPTIONS_GAME_SONGMENU=Menú
-SING_OPTIONS_GAME_DUETS=Duetos
-SING_OPTIONS_GAME_TABS=Mostrar carpetas
-SING_OPTIONS_GAME_SORTING=Clasificar por
-SING_OPTIONS_GAME_SHOWSCORES=Mostrar puntuación
-SING_OPTIONS_GAME_SINGSCORES=Marcador al cantar
+SING_OPTIONS_GENERAL_LANGUAGE=Idioma
+SING_OPTIONS_GENERAL_SONGMENU=Menú
+SING_OPTIONS_GENERAL_DUETS=Duetos
+SING_OPTIONS_GENERAL_TABS=Mostrar carpetas
+SING_OPTIONS_GENERAL_SORTING=Clasificar por
+SING_OPTIONS_GENERAL_SHOWSCORES=Mostrar puntuación
+SING_OPTIONS_GENERAL_SINGSCORES=Marcador al cantar
 
-SING_OPTIONS_GAME_LANGUAGE_DESC=Cambia el idioma del juego
-SING_OPTIONS_GAME_SONGMENU_DESC=Selecciona el modo de mostrar las canciones
-SING_OPTIONS_GAME_DUETS_DESC=Mostrar duetos en las canciones
-SING_OPTIONS_GAME_TABS_DESC=Clasificar canciones por carpetas
-SING_OPTIONS_GAME_SORTING_DESC=Ordenar canciones por
-SING_OPTIONS_GAME_SHOWSCORES_DESC=Muestra tu puntuación en la pantalla de selección de canciones
-SING_OPTIONS_GAME_SINGSCORES_DESC=Muestra un marcador en la pantalla canta
-SING_OPTIONS_GAME_MEDLEYC_DESC=Detectar versión corta de la canción automáticamente si no existe
+SING_OPTIONS_GENERAL_LANGUAGE_DESC=Cambia el idioma del juego
+SING_OPTIONS_GENERAL_SONGMENU_DESC=Selecciona el modo de mostrar las canciones
+SING_OPTIONS_GENERAL_DUETS_DESC=Mostrar duetos en las canciones
+SING_OPTIONS_GENERAL_TABS_DESC=Clasificar canciones por carpetas
+SING_OPTIONS_GENERAL_SORTING_DESC=Ordenar canciones por
+SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Muestra tu puntuación en la pantalla de selección de canciones
+SING_OPTIONS_GENERAL_SINGSCORES_DESC=Muestra un marcador en la pantalla canta
+SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detectar versión corta de la canción automáticamente si no existe
 
 OPTION_VALUE_ROULETTE=Ruleta
 OPTION_VALUE_CHESSBOARD=Ajedrez
@@ -682,6 +682,7 @@ C_FIXEDBY=Reparado por
 C_FOLDERS=Carpetas
 
 C_GAME=Juego
+C_GENERAL=General
 C_GRAPHICS=Gráficos
 
 C_INFORMATION=Información
