--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -17,8 +17,8 @@ SING_JUKEBOX_DESC=Escoitar as miñas cancións
 SING_STATS=Estatística
 SING_STATS_DESC=Ver estatísticas
 
-SING_GAME_OPTIONS=Opcións
-SING_GAME_OPTIONS_DESC=Cambia as opcións do xogo
+SING_OPTIONS=Opcións
+SING_OPTIONS_DESC=Cambia as opcións do xogo
 
 SING_EXIT=Saír
 SING_EXIT_DESC=Saír do xogo
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Difícil
 
 SING_OPTIONS=Opcións
 
-SING_OPTIONS_GAME_LANGUAGE=Idioma
-SING_OPTIONS_GAME_SONGMENU=Menú cancións
-SING_OPTIONS_GAME_DUETS=Duetos
-SING_OPTIONS_GAME_TABS=Etiquetas
-SING_OPTIONS_GAME_SORTING=Clasificar por
-SING_OPTIONS_GAME_SHOWSCORES=Amosar puntuación
-;TODO: SING_OPTIONS_GAME_SINGSCORES=Scores on singing
+SING_OPTIONS_GENERAL_LANGUAGE=Idioma
+SING_OPTIONS_GENERAL_SONGMENU=Menú cancións
+SING_OPTIONS_GENERAL_DUETS=Duetos
+SING_OPTIONS_GENERAL_TABS=Etiquetas
+SING_OPTIONS_GENERAL_SORTING=Clasificar por
+SING_OPTIONS_GENERAL_SHOWSCORES=Amosar puntuación
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES=Scores on singing
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Roleta
 OPTION_VALUE_CHESSBOARD=Tabuleiro de xadrez
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Amarelo
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Xogo
+;TODO: C_GENERAL=General
 C_GRAPHICS=Gráficos
 
 ;TODO: C_INFORMATION=Information
