--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -17,8 +17,8 @@ SING_JUKEBOX_DESC=Èist ris a’ chruinneachadh agam
 SING_STATS=Stadastaireachd
 SING_STATS_DESC=Seall an stadastaireachd
 
-SING_GAME_OPTIONS=Roghainnean a’ gheama
-SING_GAME_OPTIONS_DESC=Atharraich roghainnean a’ gheama
+SING_OPTIONS=Roghainnean a’ gheama
+SING_OPTIONS_DESC=Atharraich roghainnean a’ gheama
 
 SING_EXIT=Fàg an-seo
 SING_EXIT_DESC=Fàg an geama
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Doirbh
 
 SING_OPTIONS=Roghainnean
 
-SING_OPTIONS_GAME_LANGUAGE=Cànan
-SING_OPTIONS_GAME_SONGMENU=Clàr-taice nan òran
-SING_OPTIONS_GAME_DUETS=Òrain-chàraid
-SING_OPTIONS_GAME_TABS=Tabaichean
-SING_OPTIONS_GAME_SORTING=Seòrsachadh
-SING_OPTIONS_GAME_SHOWSCORES=Seall na sgòran
-SING_OPTIONS_GAME_SINGSCORES=Sgòran seinn
+SING_OPTIONS_GENERAL_LANGUAGE=Cànan
+SING_OPTIONS_GENERAL_SONGMENU=Clàr-taice nan òran
+SING_OPTIONS_GENERAL_DUETS=Òrain-chàraid
+SING_OPTIONS_GENERAL_TABS=Tabaichean
+SING_OPTIONS_GENERAL_SORTING=Seòrsachadh
+SING_OPTIONS_GENERAL_SHOWSCORES=Seall na sgòran
+SING_OPTIONS_GENERAL_SINGSCORES=Sgòran seinn
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Roulette
 OPTION_VALUE_CHESSBOARD=Clàr-taileisg
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Buidhe
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Geama
+;TODO: C_GENERAL=General
 C_GRAPHICS=Grafaigeachd
 
 ;TODO: C_INFORMATION=Information
