--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -17,8 +17,8 @@ SING_MULTI_DESC=Pjevaj u party mode-u
 SING_STATS=Statistika
 SING_STATS_DESC=Pogledaj statistiku
 
-SING_GAME_OPTIONS=Opcije igre
-SING_GAME_OPTIONS_DESC=Promijeni postavke
+SING_OPTIONS=Opcije igre
+SING_OPTIONS_DESC=Promijeni postavke
 
 SING_EXIT=Izlaz
 SING_EXIT_DESC=Izlaz iz igre
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Teško
 
 SING_OPTIONS=Opcije
 
-SING_OPTIONS_GAME_LANGUAGE=Jezik
-SING_OPTIONS_GAME_SONGMENU=Playliste
-;TODO: SING_OPTIONS_GAME_DUETS=Duets
-SING_OPTIONS_GAME_TABS=Tabovi
-SING_OPTIONS_GAME_SORTING=Sortiranje
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
-;TODO: SING_OPTIONS_GAME_SINGSCORES=Scores on singing
+SING_OPTIONS_GENERAL_LANGUAGE=Jezik
+SING_OPTIONS_GENERAL_SONGMENU=Playliste
+;TODO: SING_OPTIONS_GENERAL_DUETS=Duets
+SING_OPTIONS_GENERAL_TABS=Tabovi
+SING_OPTIONS_GENERAL_SORTING=Sortiranje
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES=Show scores
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES=Scores on singing
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Roulet
 OPTION_VALUE_CHESSBOARD=šahovska tabla
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Žuta boja
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Igra
+;TODO: C_GENERAL=General
 C_GRAPHICS=Video
 
 ;TODO: C_INFORMATION=Information
