--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -17,8 +17,8 @@ SING_JUKEBOX_DESC=Ascolta le mie canzoni
 SING_STATS=Statistiche
 SING_STATS_DESC=Guarda le statistiche
 
-SING_GAME_OPTIONS=Impostazioni
-SING_GAME_OPTIONS_DESC=Cambia le impostazioni del gioco
+SING_OPTIONS=Impostazioni
+SING_OPTIONS_DESC=Cambia le impostazioni del gioco
 
 SING_EXIT=Esci
 SING_EXIT_DESC=Esci da Ultrastar
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Difficile
 
 SING_OPTIONS=Impostazioni
 
-SING_OPTIONS_GAME_LANGUAGE=Lingua
-SING_OPTIONS_GAME_SONGMENU=Menu Canzone
-SING_OPTIONS_GAME_DUETS=Duetti
-SING_OPTIONS_GAME_TABS=Schede
-SING_OPTIONS_GAME_SORTING=Organizza per
-SING_OPTIONS_GAME_SHOWSCORES=Mostra punteggi
-SING_OPTIONS_GAME_SINGSCORES=Punteggi sul canto
+SING_OPTIONS_GENERAL_LANGUAGE=Lingua
+SING_OPTIONS_GENERAL_SONGMENU=Menu Canzone
+SING_OPTIONS_GENERAL_DUETS=Duetti
+SING_OPTIONS_GENERAL_TABS=Schede
+SING_OPTIONS_GENERAL_SORTING=Organizza per
+SING_OPTIONS_GENERAL_SHOWSCORES=Mostra punteggi
+SING_OPTIONS_GENERAL_SINGSCORES=Punteggi sul canto
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Roulette
 OPTION_VALUE_CHESSBOARD=Scacchiera
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Giallo
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Generali
+;TODO: C_GENERAL=General
 C_GRAPHICS=Grafica
 
 ;TODO: C_INFORMATION=Information
