--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -17,8 +17,8 @@ SING_JUKEBOX_DESC=Zenék hallgatása
 SING_STATS=Statisztika
 SING_STATS_DESC=Statisztika megnézése
 
-SING_GAME_OPTIONS=Játék beállítások
-SING_GAME_OPTIONS_DESC=Beállítások
+SING_OPTIONS=Játék beállítások
+SING_OPTIONS_DESC=Beállítások
 
 SING_EXIT=Kilépés
 SING_EXIT_DESC=Kilépés a játékból
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Nehéz
 
 SING_OPTIONS=Beállítások
 
-SING_OPTIONS_GAME_LANGUAGE=Nyelv
-SING_OPTIONS_GAME_SONGMENU=Dal Menü
-SING_OPTIONS_GAME_DUETS=Duett
-SING_OPTIONS_GAME_TABS=Elválasztók
-SING_OPTIONS_GAME_SORTING=Rendezés
-SING_OPTIONS_GAME_SHOWSCORES=Pontszámok
-SING_OPTIONS_GAME_SINGSCORES=Ének Pontszámok
+SING_OPTIONS_GENERAL_LANGUAGE=Nyelv
+SING_OPTIONS_GENERAL_SONGMENU=Dal Menü
+SING_OPTIONS_GENERAL_DUETS=Duett
+SING_OPTIONS_GENERAL_TABS=Elválasztók
+SING_OPTIONS_GENERAL_SORTING=Rendezés
+SING_OPTIONS_GENERAL_SHOWSCORES=Pontszámok
+SING_OPTIONS_GENERAL_SINGSCORES=Ének Pontszámok
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Rulett
 OPTION_VALUE_CHESSBOARD=Sakktábla
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Sárga
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Játék
+;TODO: C_GENERAL=General
 C_GRAPHICS=Grafika
 
 ;TODO: C_INFORMATION=Information
