--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -17,8 +17,8 @@ SING_JUKEBOX_DESC=Luister naar mijn verzameling
 SING_STATS=Stats
 SING_STATS_DESC=Bekijk de statistieken
 
-SING_GAME_OPTIONS=Spelopties
-SING_GAME_OPTIONS_DESC=Verander de spelopties
+SING_OPTIONS=Spelopties
+SING_OPTIONS_DESC=Verander de spelopties
 
 SING_EXIT=Stoppen
 SING_EXIT_DESC=Stop het spelletje
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Moeilijk
 
 SING_OPTIONS=Opties
 
-SING_OPTIONS_GAME_LANGUAGE=Taal
-SING_OPTIONS_GAME_SONGMENU=Liedjes Menu
-;TODO: SING_OPTIONS_GAME_DUETS=Duets
-SING_OPTIONS_GAME_TABS=Tabs
-SING_OPTIONS_GAME_SORTING=Sorteren
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
-;TODO: SING_OPTIONS_GAME_SINGSCORES=Scores on singing
+SING_OPTIONS_GENERAL_LANGUAGE=Taal
+SING_OPTIONS_GENERAL_SONGMENU=Liedjes Menu
+;TODO: SING_OPTIONS_GENERAL_DUETS=Duets
+SING_OPTIONS_GENERAL_TABS=Tabs
+SING_OPTIONS_GENERAL_SORTING=Sorteren
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES=Show scores
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES=Scores on singing
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Roulette
 OPTION_VALUE_CHESSBOARD=Schaakbord
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Geel
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Spel
+;TODO: C_GENERAL=General
 C_GRAPHICS=Graphics
 
 ;TODO: C_INFORMATION=Information
