--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -17,8 +17,8 @@ SING_JUKEBOX_DESC=Posłuchaj mojej kolekcji
 SING_STATS=Statystyki
 SING_STATS_DESC=Zobacz statystyki
 
-SING_GAME_OPTIONS=Opcje gry
-SING_GAME_OPTIONS_DESC=Zmiana ustawień gry
+SING_OPTIONS=Opcje gry
+SING_OPTIONS_DESC=Zmiana ustawień gry
 
 SING_EXIT=Wyjście
 SING_EXIT_DESC=Wyjście z gry
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Trudno
 
 SING_OPTIONS=Opcje
 
-SING_OPTIONS_GAME_LANGUAGE=Język
-SING_OPTIONS_GAME_SONGMENU=Menu piosenki
-SING_OPTIONS_GAME_DUETS=Duety
-SING_OPTIONS_GAME_TABS=Zakładki
-SING_OPTIONS_GAME_SORTING=Sortowanie
-SING_OPTIONS_GAME_SHOWSCORES=Pokaż wyniki
-SING_OPTIONS_GAME_SINGSCORES=Wyniki śpiewania
+SING_OPTIONS_GENERAL_LANGUAGE=Język
+SING_OPTIONS_GENERAL_SONGMENU=Menu piosenki
+SING_OPTIONS_GENERAL_DUETS=Duety
+SING_OPTIONS_GENERAL_TABS=Zakładki
+SING_OPTIONS_GENERAL_SORTING=Sortowanie
+SING_OPTIONS_GENERAL_SHOWSCORES=Pokaż wyniki
+SING_OPTIONS_GENERAL_SINGSCORES=Wyniki śpiewania
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Ruletka
 OPTION_VALUE_CHESSBOARD=Szachownica
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Żółty
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Gra
+;TODO: C_GENERAL=General
 C_GRAPHICS=Grafika
 
 ;TODO: C_INFORMATION=Information
