--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -17,8 +17,8 @@ SING_MULTI_DESC=петь в режиме вечеринки
 SING_STATS=Статистика
 SING_STATS_DESC=смотреть статистику
 
-SING_GAME_OPTIONS=Настройки
-SING_GAME_OPTIONS_DESC=изменить настройки игры
+SING_OPTIONS=Настройки
+SING_OPTIONS_DESC=изменить настройки игры
 
 SING_EXIT=Выход
 SING_EXIT_DESC=выйти из игры
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Сложный
 
 SING_OPTIONS=Настройки
 
-SING_OPTIONS_GAME_LANGUAGE=Язык
-SING_OPTIONS_GAME_SONGMENU=Меню песен
-;TODO: SING_OPTIONS_GAME_DUETS=Duets
-SING_OPTIONS_GAME_TABS=Табы
-SING_OPTIONS_GAME_SORTING=Сортировка
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
-;TODO: SING_OPTIONS_GAME_SINGSCORES=Scores on singing
+SING_OPTIONS_GENERAL_LANGUAGE=Язык
+SING_OPTIONS_GENERAL_SONGMENU=Меню песен
+;TODO: SING_OPTIONS_GENERAL_DUETS=Duets
+SING_OPTIONS_GENERAL_TABS=Табы
+SING_OPTIONS_GENERAL_SORTING=Сортировка
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES=Show scores
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES=Scores on singing
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=рулетка
 OPTION_VALUE_CHESSBOARD=шахматная доска
@@ -682,6 +682,7 @@ C_COLOR=Цвет
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=игра
+;TODO: C_GENERAL=General
 C_GRAPHICS=графика
 
 ;TODO: C_INFORMATION=Information
