--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -17,8 +17,8 @@ SING_MULTI_DESC=Cântă în grup
 SING_STATS=Statistici
 SING_STATS_DESC=Vezi statistici
 
-SING_GAME_OPTIONS=Opţiuni de joc
-SING_GAME_OPTIONS_DESC=Modifică opţiunile de joc
+SING_OPTIONS=Opţiuni de joc
+SING_OPTIONS_DESC=Modifică opţiunile de joc
 
 SING_EXIT=Ieşire
 SING_EXIT_DESC=Ieşi din joc
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Greu
 
 SING_OPTIONS=Opţiuni
 
-SING_OPTIONS_GAME_LANGUAGE=Limbă
-;TODO: SING_OPTIONS_GAME_SONGMENU=Song menu
-;TODO: SING_OPTIONS_GAME_DUETS=Duets
-SING_OPTIONS_GAME_TABS=Etichete
-SING_OPTIONS_GAME_SORTING=Sortează după
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
-;TODO: SING_OPTIONS_GAME_SINGSCORES=Scores on singing
+SING_OPTIONS_GENERAL_LANGUAGE=Limbă
+;TODO: SING_OPTIONS_GENERAL_SONGMENU=Song menu
+;TODO: SING_OPTIONS_GENERAL_DUETS=Duets
+SING_OPTIONS_GENERAL_TABS=Etichete
+SING_OPTIONS_GENERAL_SORTING=Sortează după
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES=Show scores
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES=Scores on singing
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Ruletă
 OPTION_VALUE_CHESSBOARD=Tablă de şah
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Galben
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Joc
+;TODO: C_GENERAL=General
 C_GRAPHICS=Grafică
 
 ;TODO: C_INFORMATION=Information
