--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -17,8 +17,8 @@ SING_JUKEBOX_DESC=Vypočujte si moju zbierku skladieb
 SING_STATS=Štatistika
 SING_STATS_DESC=Zobraziť štatistiku
 
-SING_GAME_OPTIONS=Nastavenia
-SING_GAME_OPTIONS_DESC=Nastavenia hry
+SING_OPTIONS=Nastavenia
+SING_OPTIONS_DESC=Nastavenia hry
 
 SING_EXIT=Koniec
 SING_EXIT_DESC=Návrat do systému
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Ťažká
 
 SING_OPTIONS=Nastavenia
 
-SING_OPTIONS_GAME_LANGUAGE=Jazyk
-SING_OPTIONS_GAME_SONGMENU=Skladby
-SING_OPTIONS_GAME_DUETS=Duety
-SING_OPTIONS_GAME_TABS=Kategórie
-SING_OPTIONS_GAME_SORTING=Triedenie
-SING_OPTIONS_GAME_SHOWSCORES=Zobraziť skóre
-SING_OPTIONS_GAME_SINGSCORES=Skóre počas spevu
+SING_OPTIONS_GENERAL_LANGUAGE=Jazyk
+SING_OPTIONS_GENERAL_SONGMENU=Skladby
+SING_OPTIONS_GENERAL_DUETS=Duety
+SING_OPTIONS_GENERAL_TABS=Kategórie
+SING_OPTIONS_GENERAL_SORTING=Triedenie
+SING_OPTIONS_GENERAL_SHOWSCORES=Zobraziť skóre
+SING_OPTIONS_GENERAL_SINGSCORES=Skóre počas spevu
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Ruleta
 OPTION_VALUE_CHESSBOARD=Šachovnica
@@ -682,6 +682,7 @@ C_FIXEDBY=Opravil(a)
 C_FOLDERS=Priečinky
 
 C_GAME=Hra
+;TODO: C_GENERAL=General
 C_GRAPHICS=Grafika
 
 C_INFORMATION=Informácie
