--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -17,8 +17,8 @@ SING_MULTI_DESC=Poj v nacinu zabave
 SING_STATS=Statistika
 SING_STATS_DESC=Poglej statistiko
 
-SING_GAME_OPTIONS=Nastavitve igre
-SING_GAME_OPTIONS_DESC=Spremeni nastavitve igre
+SING_OPTIONS=Nastavitve igre
+SING_OPTIONS_DESC=Spremeni nastavitve igre
 
 SING_EXIT=Izhod
 SING_EXIT_DESC=Izhod iz igre
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Težko
 
 SING_OPTIONS=Nastavitve
 
-SING_OPTIONS_GAME_LANGUAGE=Jezik
-SING_OPTIONS_GAME_SONGMENU=Meni Pesem
-;TODO: SING_OPTIONS_GAME_DUETS=Duets
-SING_OPTIONS_GAME_TABS=Mape
-SING_OPTIONS_GAME_SORTING=Sortiranje
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
-;TODO: SING_OPTIONS_GAME_SINGSCORES=Scores on singing
+SING_OPTIONS_GENERAL_LANGUAGE=Jezik
+SING_OPTIONS_GENERAL_SONGMENU=Meni Pesem
+;TODO: SING_OPTIONS_GENERAL_DUETS=Duets
+SING_OPTIONS_GENERAL_TABS=Mape
+SING_OPTIONS_GENERAL_SORTING=Sortiranje
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES=Show scores
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES=Scores on singing
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Ruleta
 OPTION_VALUE_CHESSBOARD=Šahovnica
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Rumena
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Igra
+;TODO: C_GENERAL=General
 C_GRAPHICS=Izgled
 
 ;TODO: C_INFORMATION=Information
