--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -17,8 +17,8 @@ SING_MULTI_DESC=Τραγουδήστε σε παιχνίδι "Πάρτυ"
 SING_STATS=Στατιστικά
 SING_STATS_DESC=Δείτε τα στατιστικά
 
-SING_GAME_OPTIONS=Επιλογές παιχνιδιού
-SING_GAME_OPTIONS_DESC=Αλλάξτε τις επιλογές του παιχνιδιού
+SING_OPTIONS=Επιλογές παιχνιδιού
+SING_OPTIONS_DESC=Αλλάξτε τις επιλογές του παιχνιδιού
 
 SING_EXIT=Έξοδος
 SING_EXIT_DESC=Έξοδος απο το παιχνίδι
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Δύσκολο
 
 SING_OPTIONS=Επιλογές
 
-SING_OPTIONS_GAME_LANGUAGE=Γλώσσα
-SING_OPTIONS_GAME_SONGMENU=Μενού τραγουδιού
-SING_OPTIONS_GAME_DUETS=Ντουέτες
-SING_OPTIONS_GAME_TABS=Ετικέτες
-SING_OPTIONS_GAME_SORTING=Ταξινόμιση
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
-;TODO: SING_OPTIONS_GAME_SINGSCORES=Scores on singing
+SING_OPTIONS_GENERAL_LANGUAGE=Γλώσσα
+SING_OPTIONS_GENERAL_SONGMENU=Μενού τραγουδιού
+SING_OPTIONS_GENERAL_DUETS=Ντουέτες
+SING_OPTIONS_GENERAL_TABS=Ετικέτες
+SING_OPTIONS_GENERAL_SORTING=Ταξινόμιση
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES=Show scores
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES=Scores on singing
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Ρουλέτα
 OPTION_VALUE_CHESSBOARD=Σκακιέρα
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Κίτρινος
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Παιχνίδι
+;TODO: C_GENERAL=General
 C_GRAPHICS=Γραφικά
 
 ;TODO: C_INFORMATION=Information
