--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -17,8 +17,8 @@ SING_MULTI_DESC=pevaj u timskom modu
 SING_STATS=Statistike
 SING_STATS_DESC=pogledaj statistike
 
-SING_GAME_OPTIONS=Oprcije igre
-SING_GAME_OPTIONS_DESC=promeni podesavanja igre
+SING_OPTIONS=Oprcije igre
+SING_OPTIONS_DESC=promeni podesavanja igre
 
 SING_EXIT=Izlaz
 SING_EXIT_DESC=Izadji iz igre
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Tesko
 
 SING_OPTIONS=Opcije
 
-SING_OPTIONS_GAME_LANGUAGE=Jezik
-SING_OPTIONS_GAME_SONGMENU=Meni Pesme
-;TODO: SING_OPTIONS_GAME_DUETS=Duets
-SING_OPTIONS_GAME_TABS=Tabovi
-SING_OPTIONS_GAME_SORTING=Sortiranje
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
-;TODO: SING_OPTIONS_GAME_SINGSCORES=Scores on singing
+SING_OPTIONS_GENERAL_LANGUAGE=Jezik
+SING_OPTIONS_GENERAL_SONGMENU=Meni Pesme
+;TODO: SING_OPTIONS_GENERAL_DUETS=Duets
+SING_OPTIONS_GENERAL_TABS=Tabovi
+SING_OPTIONS_GENERAL_SORTING=Sortiranje
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES=Show scores
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES=Scores on singing
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Роулетте
 OPTION_VALUE_CHESSBOARD=Шаховска карта
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Жута
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Igra
+;TODO: C_GENERAL=General
 C_GRAPHICS=Grafika
 
 ;TODO: C_INFORMATION=Information
