--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -17,8 +17,8 @@ SING_MULTI_DESC=パーティー・モードで歌う
 SING_STATS=統計
 SING_STATS_DESC=統計表
 
-SING_GAME_OPTIONS=ゲーム設定
-SING_GAME_OPTIONS_DESC=ゲーム設定を変える
+SING_OPTIONS=ゲーム設定
+SING_OPTIONS_DESC=ゲーム設定を変える
 
 SING_EXIT=やめる
 SING_EXIT_DESC=ゲームをやめる
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=難しい
 
 SING_OPTIONS=設定
 
-SING_OPTIONS_GAME_LANGUAGE=言語
-SING_OPTIONS_GAME_SONGMENU=曲メニュー
-;TODO: SING_OPTIONS_GAME_DUETS=Duets
-SING_OPTIONS_GAME_TABS=タッブ
-SING_OPTIONS_GAME_SORTING=ソーティング
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
-;TODO: SING_OPTIONS_GAME_SINGSCORES=Scores on singing
+SING_OPTIONS_GENERAL_LANGUAGE=言語
+SING_OPTIONS_GENERAL_SONGMENU=曲メニュー
+;TODO: SING_OPTIONS_GENERAL_DUETS=Duets
+SING_OPTIONS_GENERAL_TABS=タッブ
+SING_OPTIONS_GENERAL_SORTING=ソーティング
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES=Show scores
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES=Scores on singing
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 ;TODO: OPTION_VALUE_ROULETTE=Roulette
 ;TODO: OPTION_VALUE_CHESSBOARD=Chessboard
@@ -682,6 +682,7 @@ C_COLOR=色
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=ゲーム
+;TODO: C_GENERAL=General
 C_GRAPHICS=グラフィックス
 
 ;TODO: C_INFORMATION=Information
