--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -17,8 +17,8 @@ SING_MULTI_DESC=Syng i fest modus
 SING_STATS=stats
 SING_STATS_DESC=Se statestikker
 
-SING_GAME_OPTIONS=Spil Indstillinger
-SING_GAME_OPTIONS_DESC=Ændre spil Indstillinger
+SING_OPTIONS=Spil Indstillinger
+SING_OPTIONS_DESC=Ændre spil Indstillinger
 
 SING_EXIT=Forlad
 SING_EXIT_DESC=Forlad spillet
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Svær
 
 SING_OPTIONS=Indstillinger
 
-SING_OPTIONS_GAME_LANGUAGE=Sprog
-SING_OPTIONS_GAME_SONGMENU=Sang Menu
-;TODO: SING_OPTIONS_GAME_DUETS=Duets
-SING_OPTIONS_GAME_TABS=Tabs
-SING_OPTIONS_GAME_SORTING=Sorting
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
-;TODO: SING_OPTIONS_GAME_SINGSCORES=Scores on singing
+SING_OPTIONS_GENERAL_LANGUAGE=Sprog
+SING_OPTIONS_GENERAL_SONGMENU=Sang Menu
+;TODO: SING_OPTIONS_GENERAL_DUETS=Duets
+SING_OPTIONS_GENERAL_TABS=Tabs
+SING_OPTIONS_GENERAL_SORTING=Sorting
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES=Show scores
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES=Scores on singing
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Roulette
 OPTION_VALUE_CHESSBOARD=Skakbræt
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Gul
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Spil
+;TODO: C_GENERAL=General
 C_GRAPHICS=Grafik
 
 ;TODO: C_INFORMATION=Information
