--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -17,8 +17,8 @@ SING_JUKEBOX_DESC=Listen to my collection
 SING_STATS=Stats
 SING_STATS_DESC=View the statistics
 
-SING_GAME_OPTIONS=Game options
-SING_GAME_OPTIONS_DESC=Change game settings
+SING_OPTIONS=Game options
+SING_OPTIONS_DESC=Change game settings
 
 SING_EXIT=Quit
 SING_EXIT_DESC=Quit game
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Hard
 
 SING_OPTIONS=Options
 
-SING_OPTIONS_GAME_LANGUAGE=Language
-SING_OPTIONS_GAME_SONGMENU=Song menu
-SING_OPTIONS_GAME_DUETS=Duets
-SING_OPTIONS_GAME_TABS=Tabs
-SING_OPTIONS_GAME_SORTING=Sorting
-SING_OPTIONS_GAME_SHOWSCORES=Show scores
-SING_OPTIONS_GAME_SINGSCORES=Scores on singing
+SING_OPTIONS_GENERAL_LANGUAGE=Language
+SING_OPTIONS_GENERAL_SONGMENU=Song menu
+SING_OPTIONS_GENERAL_DUETS=Duets
+SING_OPTIONS_GENERAL_TABS=Tabs
+SING_OPTIONS_GENERAL_SORTING=Sorting
+SING_OPTIONS_GENERAL_SHOWSCORES=Show scores
+SING_OPTIONS_GENERAL_SINGSCORES=Scores on singing
 
-SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Roulette
 OPTION_VALUE_CHESSBOARD=Chessboard
@@ -684,6 +684,7 @@ C_FIXEDBY=Fixed by
 C_FOLDERS=Folders
 
 C_GAME=Game
+C_GENERAL=General
 C_GRAPHICS=Graphics
 
 C_INFORMATION=Information
