--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -17,8 +17,8 @@ SING_JUKEBOX_DESC=Écouter mes chansons
 SING_STATS=Statistiques
 SING_STATS_DESC=Consultez les statistiques
 
-SING_GAME_OPTIONS=Options
-SING_GAME_OPTIONS_DESC=Modifiez les paramètres du jeu
+SING_OPTIONS=Options
+SING_OPTIONS_DESC=Modifiez les paramètres du jeu
 
 SING_EXIT=Quitter
 SING_EXIT_DESC=Quitter le jeu
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Difficile
 
 SING_OPTIONS=Options
 
-SING_OPTIONS_GAME_LANGUAGE=Langue
-SING_OPTIONS_GAME_SONGMENU=Menu
-SING_OPTIONS_GAME_DUETS=Duos
-SING_OPTIONS_GAME_TABS=Dossier
-SING_OPTIONS_GAME_SORTING=Tri par
-SING_OPTIONS_GAME_SHOWSCORES=Montrer les scores
-SING_OPTIONS_GAME_SINGSCORES=Scores sur le chant
+SING_OPTIONS_GENERAL_LANGUAGE=Langue
+SING_OPTIONS_GENERAL_SONGMENU=Menu
+SING_OPTIONS_GENERAL_DUETS=Duos
+SING_OPTIONS_GENERAL_TABS=Dossier
+SING_OPTIONS_GENERAL_SORTING=Tri par
+SING_OPTIONS_GENERAL_SHOWSCORES=Montrer les scores
+SING_OPTIONS_GENERAL_SINGSCORES=Scores sur le chant
 
-SING_OPTIONS_GAME_LANGUAGE_DESC=Changez la langue du jeu
-SING_OPTIONS_GAME_SONGMENU_DESC=Sélectionnez le mode d'affichage des chansons
-SING_OPTIONS_GAME_DUETS_DESC=Montrer les duos sur les chansons
-SING_OPTIONS_GAME_TABS_DESC=Trier les chansons en dossiers
-SING_OPTIONS_GAME_SORTING_DESC=Trier les chansons par
-SING_OPTIONS_GAME_SHOWSCORES_DESC=Montrer votre score dans l'écran de sélection des chansons
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-SING_OPTIONS_GAME_MEDLEYC_DESC=Détecter automatiquement la version courte de la chanson si elle n'existe pas
+SING_OPTIONS_GENERAL_LANGUAGE_DESC=Changez la langue du jeu
+SING_OPTIONS_GENERAL_SONGMENU_DESC=Sélectionnez le mode d'affichage des chansons
+SING_OPTIONS_GENERAL_DUETS_DESC=Montrer les duos sur les chansons
+SING_OPTIONS_GENERAL_TABS_DESC=Trier les chansons en dossiers
+SING_OPTIONS_GENERAL_SORTING_DESC=Trier les chansons par
+SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Montrer votre score dans l'écran de sélection des chansons
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+SING_OPTIONS_GENERAL_MEDLEYC_DESC=Détecter automatiquement la version courte de la chanson si elle n'existe pas
 
 OPTION_VALUE_ROULETTE=Roulette
 OPTION_VALUE_CHESSBOARD=Échiquier
@@ -682,6 +682,7 @@ C_FIXEDBY=Réparée par
 C_FOLDERS=Dossiers
 
 C_GAME=Jeu
+;TODO: C_GENERAL=General
 C_GRAPHICS=Graphismes
 
 C_INFORMATION=Information
