--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -17,8 +17,8 @@ SING_JUKEBOX_DESC=Klausyk mano kolekciją
 SING_STATS=Statistika
 SING_STATS_DESC=Peržiūrėkite statistiką
 
-SING_GAME_OPTIONS=Žaidimo parinktys
-SING_GAME_OPTIONS_DESC=Keisti žaidimo nustatymus
+SING_OPTIONS=Žaidimo parinktys
+SING_OPTIONS_DESC=Keisti žaidimo nustatymus
 
 SING_EXIT=Išeiti
 SING_EXIT_DESC=Baigti žaidimą
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Sunku
 
 SING_OPTIONS=Galimybės
 
-SING_OPTIONS_GAME_LANGUAGE=Kalba
-SING_OPTIONS_GAME_SONGMENU=Daina Meniu
-;TODO: SING_OPTIONS_GAME_DUETS=Duets
-SING_OPTIONS_GAME_TABS=Skirtukai
-SING_OPTIONS_GAME_SORTING=Rūšiavimas
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
-SING_OPTIONS_GAME_SINGSCORES=Dainos rezultatai
+SING_OPTIONS_GENERAL_LANGUAGE=Kalba
+SING_OPTIONS_GENERAL_SONGMENU=Daina Meniu
+;TODO: SING_OPTIONS_GENERAL_DUETS=Duets
+SING_OPTIONS_GENERAL_TABS=Skirtukai
+SING_OPTIONS_GENERAL_SORTING=Rūšiavimas
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES=Show scores
+SING_OPTIONS_GENERAL_SINGSCORES=Dainos rezultatai
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Ruletė
 OPTION_VALUE_CHESSBOARD=Šachmatų lenta
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Geltonas
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Žaidimas
+;TODO: C_GENERAL=General
 C_GRAPHICS=Grafika
 
 ;TODO: C_INFORMATION=Information
