--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -17,8 +17,8 @@ SING_MULTI_DESC=Schmäisst eng Party
 SING_STATS=Statistiken
 SING_STATS_DESC=Kuckt d'Statistiken un
 
-SING_GAME_OPTIONS=Optiounen
-SING_GAME_OPTIONS_DESC=Ännert d'Astellunge vum Spill
+SING_OPTIONS=Optiounen
+SING_OPTIONS_DESC=Ännert d'Astellunge vum Spill
 
 SING_EXIT=Verloossen
 SING_EXIT_DESC=Spill verloossen
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Schwéier
 
 SING_OPTIONS=Optiounen
 
-SING_OPTIONS_GAME_LANGUAGE=Sprooch
-SING_OPTIONS_GAME_SONGMENU=Menü
-;TODO: SING_OPTIONS_GAME_DUETS=Duets
-SING_OPTIONS_GAME_TABS=Ordner
-SING_OPTIONS_GAME_SORTING=Zortéieren no
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
-;TODO: SING_OPTIONS_GAME_SINGSCORES=Scores on singing
+SING_OPTIONS_GENERAL_LANGUAGE=Sprooch
+SING_OPTIONS_GENERAL_SONGMENU=Menü
+;TODO: SING_OPTIONS_GENERAL_DUETS=Duets
+SING_OPTIONS_GENERAL_TABS=Ordner
+SING_OPTIONS_GENERAL_SORTING=Zortéieren no
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES=Show scores
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES=Scores on singing
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 ;TODO: OPTION_VALUE_ROULETTE=Roulette
 ;TODO: OPTION_VALUE_CHESSBOARD=Chessboard
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Giel
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Spill
+;TODO: C_GENERAL=General
 C_GRAPHICS=Graphik
 
 ;TODO: C_INFORMATION=Information
