--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -17,8 +17,8 @@ SING_MULTI_DESC=Syng i party-modus
 SING_STATS=Statistikk
 SING_STATS_DESC=Vis statistikk
 
-SING_GAME_OPTIONS=Spillinnstillinger
-SING_GAME_OPTIONS_DESC=Endre spillinstillinger
+SING_OPTIONS=Spillinnstillinger
+SING_OPTIONS_DESC=Endre spillinstillinger
 
 SING_EXIT=Avslutt
 SING_EXIT_DESC=Avslutt spillet
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Vanskelig
 
 SING_OPTIONS=Innstillinger
 
-SING_OPTIONS_GAME_LANGUAGE=Språk
-SING_OPTIONS_GAME_SONGMENU=Sangmeny
-;TODO: SING_OPTIONS_GAME_DUETS=Duets
-SING_OPTIONS_GAME_TABS=Mappeinndeling
-SING_OPTIONS_GAME_SORTING=Sortering
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
-;TODO: SING_OPTIONS_GAME_SINGSCORES=Scores on singing
+SING_OPTIONS_GENERAL_LANGUAGE=Språk
+SING_OPTIONS_GENERAL_SONGMENU=Sangmeny
+;TODO: SING_OPTIONS_GENERAL_DUETS=Duets
+SING_OPTIONS_GENERAL_TABS=Mappeinndeling
+SING_OPTIONS_GENERAL_SORTING=Sortering
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES=Show scores
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES=Scores on singing
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Rulett
 OPTION_VALUE_CHESSBOARD=Sjakkbrett
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Gul
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Spill
+;TODO: C_GENERAL=General
 C_GRAPHICS=Grafikk
 
 ;TODO: C_INFORMATION=Information
