--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -17,8 +17,8 @@ SING_JUKEBOX_DESC=escute minhas musicas
 SING_STATS=Estatísticas
 SING_STATS_DESC=Ver Estatísticas
 
-SING_GAME_OPTIONS=Opções de Jogo
-SING_GAME_OPTIONS_DESC=Alterar configurações de Jogo
+SING_OPTIONS=Opções de Jogo
+SING_OPTIONS_DESC=Alterar configurações de Jogo
 
 SING_EXIT=Sair
 SING_EXIT_DESC=Sair do Jogo
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Difícil
 
 SING_OPTIONS=Opções
 
-SING_OPTIONS_GAME_LANGUAGE=Idioma
-SING_OPTIONS_GAME_SONGMENU=Menu de Canções
-SING_OPTIONS_GAME_DUETS=Duetos
-SING_OPTIONS_GAME_TABS=Subpastas
-SING_OPTIONS_GAME_SORTING=Ordenação
-SING_OPTIONS_GAME_SHOWSCORES=Mostrar Pontuações
-SING_OPTIONS_GAME_SINGSCORES=Pontuações ao cantar
+SING_OPTIONS_GENERAL_LANGUAGE=Idioma
+SING_OPTIONS_GENERAL_SONGMENU=Menu de Canções
+SING_OPTIONS_GENERAL_DUETS=Duetos
+SING_OPTIONS_GENERAL_TABS=Subpastas
+SING_OPTIONS_GENERAL_SORTING=Ordenação
+SING_OPTIONS_GENERAL_SHOWSCORES=Mostrar Pontuações
+SING_OPTIONS_GENERAL_SINGSCORES=Pontuações ao cantar
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Roleta
 OPTION_VALUE_CHESSBOARD=Xadrez
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Amarelo
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Jogo
+;TODO: C_GENERAL=General
 C_GRAPHICS=Gráficos
 
 ;TODO: C_INFORMATION=Information
