--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -17,8 +17,8 @@ SING_MULTI_DESC=Laulatte kilpaa useammassa tiimissä
 SING_STATS=Tilastot
 SING_STATS_DESC=Katso tilastoja
 
-SING_GAME_OPTIONS=Peliasetukset
-SING_GAME_OPTIONS_DESC=Muuta pelin asetuksia
+SING_OPTIONS=Peliasetukset
+SING_OPTIONS_DESC=Muuta pelin asetuksia
 
 SING_EXIT=Lopeta
 SING_EXIT_DESC=Sammuta peli
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Vaikea
 
 SING_OPTIONS=Asetukset
 
-SING_OPTIONS_GAME_LANGUAGE=Kieli
-SING_OPTIONS_GAME_SONGMENU=Kappalelistavalikko
-;TODO: SING_OPTIONS_GAME_DUETS=Duets
-SING_OPTIONS_GAME_TABS=Välilehdet
-SING_OPTIONS_GAME_SORTING=Järjestys
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
-;TODO: SING_OPTIONS_GAME_SINGSCORES=Scores on singing
+SING_OPTIONS_GENERAL_LANGUAGE=Kieli
+SING_OPTIONS_GENERAL_SONGMENU=Kappalelistavalikko
+;TODO: SING_OPTIONS_GENERAL_DUETS=Duets
+SING_OPTIONS_GENERAL_TABS=Välilehdet
+SING_OPTIONS_GENERAL_SORTING=Järjestys
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES=Show scores
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES=Scores on singing
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Ruletti
 OPTION_VALUE_CHESSBOARD=Shakkilauta
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Keltainen
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Peli
+;TODO: C_GENERAL=General
 C_GRAPHICS=Kuva
 
 ;TODO: C_INFORMATION=Information
