--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -17,8 +17,8 @@ SING_MULTI_DESC=Sjung i partyläge
 SING_STATS=Statistik
 SING_STATS_DESC=Kolla statistiken
 
-SING_GAME_OPTIONS=Spelinställningar
-SING_GAME_OPTIONS_DESC=Ändra spelets inställningar
+SING_OPTIONS=Spelinställningar
+SING_OPTIONS_DESC=Ändra spelets inställningar
 
 SING_EXIT=Avsluta
 SING_EXIT_DESC=Sluta spela
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Svår
 
 SING_OPTIONS=Inställningar
 
-SING_OPTIONS_GAME_LANGUAGE=Språk
-SING_OPTIONS_GAME_SONGMENU=Låtmeny
-;TODO: SING_OPTIONS_GAME_DUETS=Duets
-SING_OPTIONS_GAME_TABS=Tabbar
-SING_OPTIONS_GAME_SORTING=Sortering
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
-;TODO: SING_OPTIONS_GAME_SINGSCORES=Scores on singing
+SING_OPTIONS_GENERAL_LANGUAGE=Språk
+SING_OPTIONS_GENERAL_SONGMENU=Låtmeny
+;TODO: SING_OPTIONS_GENERAL_DUETS=Duets
+SING_OPTIONS_GENERAL_TABS=Tabbar
+SING_OPTIONS_GENERAL_SORTING=Sortering
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES=Show scores
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES=Scores on singing
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Roulett
 OPTION_VALUE_CHESSBOARD=schackbräde
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Gul
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Spel
+;TODO: C_GENERAL=General
 C_GRAPHICS=Grafik
 
 ;TODO: C_INFORMATION=Information
