--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -17,8 +17,8 @@ SING_JUKEBOX_DESC=Hlustaðu lögin mín
 SING_STATS=Tölfræði
 SING_STATS_DESC=Skoða tölfræði
 
-SING_GAME_OPTIONS=Leikstillingar
-SING_GAME_OPTIONS_DESC=Breyta leikstillingum
+SING_OPTIONS=Leikstillingar
+SING_OPTIONS_DESC=Breyta leikstillingum
 
 SING_EXIT=Hætta
 SING_EXIT_DESC=Hætta leik
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Erfitt
 
 SING_OPTIONS=Stillingar
 
-SING_OPTIONS_GAME_LANGUAGE=Tungumál
-SING_OPTIONS_GAME_SONGMENU=Lagavalmynd
-;TODO: SING_OPTIONS_GAME_DUETS=Duets
-SING_OPTIONS_GAME_TABS=Flipar
-SING_OPTIONS_GAME_SORTING=Röðun
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
-;TODO: SING_OPTIONS_GAME_SINGSCORES=Scores on singing
+SING_OPTIONS_GENERAL_LANGUAGE=Tungumál
+SING_OPTIONS_GENERAL_SONGMENU=Lagavalmynd
+;TODO: SING_OPTIONS_GENERAL_DUETS=Duets
+SING_OPTIONS_GENERAL_TABS=Flipar
+SING_OPTIONS_GENERAL_SORTING=Röðun
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES=Show scores
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES=Scores on singing
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Rúlletta
 OPTION_VALUE_CHESSBOARD=Skákborð
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Gulur
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Leikur
+;TODO: C_GENERAL=General
 C_GRAPHICS=Mynd
 
 ;TODO: C_INFORMATION=Information
