--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -17,8 +17,8 @@ SING_MULTI_DESC=Zpívejte v párty-módu
 SING_STATS=Statistiky
 SING_STATS_DESC=Zobrazit statistiky
 
-SING_GAME_OPTIONS=Herní možnosti
-SING_GAME_OPTIONS_DESC=Změnit nastavení hry
+SING_OPTIONS=Herní možnosti
+SING_OPTIONS_DESC=Změnit nastavení hry
 
 SING_EXIT=Ukončit
 SING_EXIT_DESC=Ukončit hru
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=Těžká
 
 SING_OPTIONS=Možnosti
 
-SING_OPTIONS_GAME_LANGUAGE=Jazyk
-SING_OPTIONS_GAME_SONGMENU=Menu skladeb
-;TODO: SING_OPTIONS_GAME_DUETS=Duets
-SING_OPTIONS_GAME_TABS=Složky
-SING_OPTIONS_GAME_SORTING=Řazení
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
-;TODO: SING_OPTIONS_GAME_SINGSCORES=Scores on singing
+SING_OPTIONS_GENERAL_LANGUAGE=Jazyk
+SING_OPTIONS_GENERAL_SONGMENU=Menu skladeb
+;TODO: SING_OPTIONS_GENERAL_DUETS=Duets
+SING_OPTIONS_GENERAL_TABS=Složky
+SING_OPTIONS_GENERAL_SORTING=Řazení
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES=Show scores
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES=Scores on singing
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 OPTION_VALUE_ROULETTE=Ruleta
 OPTION_VALUE_CHESSBOARD=Šachovnice
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=Žlutá
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=Hra
+;TODO: C_GENERAL=General
 C_GRAPHICS=Grafika
 
 ;TODO: C_INFORMATION=Information
