--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -17,8 +17,8 @@ SING_MULTI_DESC=派对模式唱歌
 SING_STATS=统计
 SING_STATS_DESC=查看统计资料
 
-SING_GAME_OPTIONS=游戏选项
-SING_GAME_OPTIONS_DESC=更改游戏设置
+SING_OPTIONS=游戏选项
+SING_OPTIONS_DESC=更改游戏设置
 
 SING_EXIT=退出
 SING_EXIT_DESC=退出游戏
@@ -41,22 +41,22 @@ OPTION_VALUE_HARD=困难
 
 SING_OPTIONS=选项
 
-SING_OPTIONS_GAME_LANGUAGE=语言
-SING_OPTIONS_GAME_SONGMENU=歌曲菜单
-;TODO: SING_OPTIONS_GAME_DUETS=Duets
-SING_OPTIONS_GAME_TABS=标签
-SING_OPTIONS_GAME_SORTING=排列
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
-;TODO: SING_OPTIONS_GAME_SINGSCORES=Scores on singing
+SING_OPTIONS_GENERAL_LANGUAGE=语言
+SING_OPTIONS_GENERAL_SONGMENU=歌曲菜单
+;TODO: SING_OPTIONS_GENERAL_DUETS=Duets
+SING_OPTIONS_GENERAL_TABS=标签
+SING_OPTIONS_GENERAL_SORTING=排列
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES=Show scores
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES=Scores on singing
 
-;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
 
 ;TODO: OPTION_VALUE_ROULETTE=Roulette
 ;TODO: OPTION_VALUE_CHESSBOARD=Chessboard
@@ -682,6 +682,7 @@ C_COLOR_YELLOW=黄
 ;TODO: C_FOLDERS=Folders
 
 C_GAME=游戏
+;TODO: C_GENERAL=General
 C_GRAPHICS=画面
 
 ;TODO: C_INFORMATION=Information
